--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "4.0.0",
+    "@stripe/stripe-js": "^1.29.0",
+    "axios": "^0.27.2",
+    "faunadb": "^4.5.4",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "nextjs-progressbar": "^0.0.14",
+    "prismic-dom": "^2.2.7",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.52.0",
+    "stripe": "^9.2.0"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^17.0.35",
+    "@types/prismic-dom": "^2.1.1",
+    "@types/react": "^18.0.9",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.6.4"
   }
 }
